# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.159 2005/01/28 19:36:49 wolf31o2 Exp $

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh:
  Re-enabled preclean in grp and added gconfd-2 killing.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Changed acpi=ht to acpi=off. This fixes acpi loading and also allows for
  users to use apm.

  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh,
  targets/netboot/netboot-packages.sh, targets/stage1/stage1-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/tinderbox/tinderbox-chroot.sh:
  Added ability to pause indefinitely. This closes bug #79798. I've also added
  the gcond-2 killall back in, but now it is in the actual preclean script and
  is executed inside the chroot.

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Updated for 1.1.3 release.

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-busybox.sh, targets/netboot/netboot-kernel.sh,
  targets/netboot/netboot-packages.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  Updated to use package.use correctly. Blame Robert Paskowitz
  <rpaskowitz@confucius.ca> from the gentoo-catalyst mailing list.

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Fixed find line for new stage1 /var/db/pkg.

  25 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh: