@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.159 2005/01/28 19:36:49 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.160 2005/01/28 20:23:05 wolf31o2 Exp $
+
+  28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript/alpha-archscript.sh, livecd/runscript/x86-archscript.sh,
+  livecd/runscript-support/kmerge.sh:
+  Forcing devfs if livecd/dev-manager isn't udev. This should fix building 2.4
+  kernels.
 
   28 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh:
